--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'MUchapter'%}">Home</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'index'%}">Home</a>
           </li>
         
           <li class="nav-item">
