--- a/templates/code_of_conduct.html
+++ b/templates/code_of_conduct.html
@@ -44,12 +44,13 @@
       </button>
   
       <!-- Links and Login Button -->
+         <!-- Links and Login Button -->
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'MUchapter'%}">Home</a>
-              </li>
-            
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'index'%}">Home</a>
+          </li>
+        
           <li class="nav-item">
             <a class="nav-link" href="{% url 'homepage'%}">Events</a>
           </li>
