--- a/templates/Login.html
+++ b/templates/Login.html
@@ -144,11 +144,11 @@ a.no-underline {
         <span class="navbar-toggler-icon"></span>
       </button>
   
-      <!-- Links and Login Button -->
+            <!-- Links and Login Button -->
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'MUchapter'%}">Home</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'index'%}">Home</a>
           </li>
         
           <li class="nav-item">
