--- a/templates/index.html
+++ b/templates/index.html
@@ -50,8 +50,9 @@
   
   .swiper-slide img {
     max-width: 100%;
-    height: 100%;
+    height: 50%;
     border-radius: 2px;
+  
   }
   
   .testimonial {
@@ -217,37 +218,33 @@
           
     </div>
   </div>
-  <div class="container">
-  <div class="row"style="padding:10px;margin:0px;border:">
-    <div class="row">  
-          
+  <div class="card p-4 mt-5 w-100" style="border: none;">
+   
 
-      <div class="col-2 col-sm-2">
-        <img src="{% static 'mzumbepycon/images/LOGO MZUMBE_042618.png'%}" style="width:100%; "> </div>
-      <div class="col-2">
-        <img src="{% static 'mzumbepycon/images/pyconlogo.png'%}" style="width:100%; ">
-
-  
+<div class="container my-4">
+  <div class="row justify-content-center align-items-center text-center">
+    <div class="col-lg-2 col-md-4 col-6 mb-3">
+      <img src="{% static 'mzumbepycon/images/mzumbelogo.png' %}" class="img-fluid" alt="Sponsor 1 Logo">
     </div>
-    <div class="col-2">
-      <img src="{% static 'mzumbepycon/images/djangologo.png'%}" style="width:100%;margin-top:10px; ">
-
+    <div class="col-lg-2 col-md-4 col-6 mb-3">
+      <img src="{% static 'mzumbepycon/images/locopycon.jpg' %}" class="img-fluid" alt="Sponsor 2 Logo">
     </div>
-  <div class="col-2">
-    <img src="{% static 'mzumbepycon/images/bnrylogo.png'%}" style="width:100%; margin-top:25px;">
-
-
-</div>
-<div class="col-2">
-  <img src="{% static 'mzumbepycon/images/subcode.png'%}" style="width:100%; margin-top:25px; ">
-</div>
-<div class="col-2">
-  <img src="{% static 'mzumbepycon/images/irabulogo.svg'%}" style="width:100%; ">
-    
-
-
-</div>
+    <div class="col-lg-2 col-md-4 col-6 mb-3">
+      <img src="{% static 'mzumbepycon/images/djangologo.png' %}" class="img-fluid" alt="Sponsor 3 Logo">
+    </div>
+    <div class="col-lg-2 col-md-4 col-6 mb-3">
+      <img src="{% static 'mzumbepycon/images/bnrylogo.png' %}" class="img-fluid" alt="Sponsor 4 Logo">
+    </div>
+    <div class="col-lg-2 col-md-4 col-6 mb-3">
+      <img src="{% static 'mzumbepycon/images/subcode.png' %}" class="img-fluid" alt="Sponsor 5 Logo">
+    </div>
+    <div class="col-lg-2 col-md-4 col-6 mb-3">
+      <img src="{% static 'mzumbepycon/images/irabulogo.svg' %}" class="img-fluid" alt="Sponsor 6 Logo">
+    </div>
   </div>
+</div>
+</div>
+
     
 
   
@@ -261,7 +258,7 @@
 
   
   </div>
-  <br><br>
+  
   <div class="row"style="padding:0px;">
     
 
@@ -359,7 +356,7 @@ The chapter conducts its activities through a variety of workshops and talks, de
 </div>
 <script>
   var swiper = new Swiper(".mySwiper", {
-    spaceBetween: 30,
+    spaceBetween: 5,
     slidesPerView: 2,
     effect: "coverflow",
     grabCursor: true,
@@ -517,29 +514,29 @@ The chapter conducts its activities through a variety of workshops and talks, de
 
 
 <h1 class="text-center dispaly-3 customer heading">MEET OUR TEAM</h1>
-<div class="row"style="padding:0px;margin:0px;background-color:">
-  <div class="row">  
-    <div class="col-2">
+<div class="container-fluid p-0">
+<div class="row justify-content-center"style="padding:0px;margin:0px;background-color:">
+
+    <div class="col-md-1 col-sm-3">
     </div>
     
-    <div class="col-3 ">
+    <div class="col-md-3 col-sm-6 text-center ">
       <img src="{% static 'mzumbepycon/images/Martha.jpg'%}" alt="Profile Image" class="profile-img1">
       <h5>UI/UX Design&Chapter Leader</h5>
       <p>Martha Adolph</p>
   </div>
-  <div class="col-3 ">
+  <div class="col-md-3 col-sm-6 text-center ">
     <img src="{% static 'mzumbepycon/images/iffah.jpg'%}" alt="Profile Image" class="profile-img1">
     <h5>Mentor</h5>
     <p>Ifaadati Hamad</p>
 </div>
-<div class="col-3 ">
+<div class="col-md-3 col-sm-6 text-center ">
   <img src="{% static 'mzumbepycon/images/Zubeda.jpeg'%}" alt="Profile Image" class="profile-img1">
   <h5>Developer&Chapter Leader</h5>
   <p>Zubeda Nurdin</p>
 </div>
-
-   
-    
+<div class="col-md-2 col-sm-3">
+</div>  
 
  
  
@@ -548,28 +545,28 @@ The chapter conducts its activities through a variety of workshops and talks, de
 
 </div>
   
-<div class="row"style="padding:10px;margin:0px;background-color:">
-  <div class="row">  
-    <div class="col-2">
+<div class="container-fluid p-0">
+  <div class="row justify-content-center"style="padding:0px;margin:0px;background-color:">
+  
+    <div class="col-md-1 col-sm-3">
     </div>
-    
-    <div class="col-3 ">
+    <div class="col-md-3 col-sm-6 text-center ">
       <img src="{% static 'mzumbepycon/images/Picsart_25-02-25_12-46-31-070.jpg'%}" alt="Profile Image" class="profile-img1">
       <h5>Mentor</h5>
-      <p>James</p>
+      <p>Ismail</p>
   </div>
-  <div class="col-3 ">
+  <div class="col-md-3 col-sm-6 text-center ">
     <img src="{% static 'mzumbepycon/images/mine.jpg'%}" alt="Profile Image" class="profile-img1">
     <h5>Developer</h5>
     <p>Norbeth Vitus</p>
 </div>
-<div class="col-3 ">
+<div class="col-md-3 col-sm-6 text-center ">
   <img src="{% static 'mzumbepycon/images/Ommy.jpg'%}" alt="Profile Image" class="profile-img1">
   <h5>Mentor</h5>
   <p>Omari</p>
 </div>
-
-   
+<div class="col-md-2 col-sm-3">
+</div>
     
 
  
