--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -76,6 +76,7 @@
         </div>
       
     </div>
+    </div>
   </nav>
 
   <div class="container-fluid p-0">
@@ -115,16 +116,16 @@
         <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
                 <!-- Search Event Dropdown -->
-                <div class="form-group">
-                    <label for="searchEvent" class="form-label text-danger" style="color: #fc8d67;">Search Event</label>
-                    <select id="searchEvent" class="form-select">
+                <div class="me-2">
+                    <label for="searchEvent" class="form-label text-danger" style="color: #fc8d67; margin-bottom:10px;">Search Event</label>
+                    <select id="searchEvent" class="form-select" style=" margin-bottom:40px;">
                         <option selected>Django Girls</option>
                         <option value="1">PyCon Talk</option>
                         <option value="2">Hackathon</option>
                     </select>
                 </div>
                 <!-- Place Dropdown -->
-                <div class="form-group">
+                <div class="me-2">
                     <label for="place" class="form-label text-danger" style="color: #fc8d67;">Place</label>
                     <select id="place" class="form-select">
                         <option selected>Arusha</option>
@@ -133,7 +134,7 @@
                     </select>
                 </div>
                 <!-- Time Dropdown -->
-                <div class="form-group">
+                <div class="me-2">
                     <label for="time" class="form-label text-danger" style="color: #fc8d67;">Time</label>
                     <select id="time" class="form-select">
                         <option selected>Any date</option>
