--- a/templates/code_of_conduct.html
+++ b/templates/code_of_conduct.html
@@ -1,6 +1,6 @@
 
 {% load static %}
-{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,13 +44,12 @@
       </button>
   
       <!-- Links and Login Button -->
-         <!-- Links and Login Button -->
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'index'%}">Home</a>
-          </li>
-        
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'index'%}">Home</a>
+              </li>
+            
           <li class="nav-item">
             <a class="nav-link" href="{% url 'homepage'%}">Events</a>
           </li>
@@ -174,11 +173,12 @@
         Thank you for helping to make Pycon Tanzania a welcoming and friendly community for all.</td>
 </tr>
 
-<table>
+</table>
 
 </div>
 </div>
 </div>
+
 
 
 
@@ -190,7 +190,6 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
-</body>
 <footer class="footer bg-light mt-5">
     <div class="container-fluid" style="background-color: #fdca9b;">
         <div class="container py-4">
@@ -254,4 +253,6 @@
     </div>
   </footer>
 
+
+</body>
 </html>
